register and login user routes, validation of client payload and  auth middleware

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 PORT=3000
+DOCKER=false
 
 DATABASE_PORT=5432
 DATABASE_USERNAME=db_usenrame
 DATABASE_PASSWORD=db_password
 DATABASE_NAME=db_name
+JWT_SECRET=jwt_secret
