--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "tsc",
     "start": "ts-node-esm dist/app.js ",
     "typeorm": "typeorm-ts-node-commonjs",
-    "migration:generate": "npm run typeorm migration:generate -- -d src/data-source.ts",
-    "migration:run": "npm run typeorm migration:run -- -d src/data-source.ts"
+    "migration:generate": "npm run typeorm migration:generate -- -d dist/data-source.js",
+    "migration:run": "npm run typeorm migration:run -- -d dist/data-source.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-body-parser-error-handler": "^1.0.7",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.0",
     "reflect-metadata": "^0.2.2",
@@ -25,7 +26,9 @@
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.5.5",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
